--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Tauri + React + Typescript</title>
   </head>
 
-  <body>
+  <body class="px-2 py-8">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
